--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#sketch-container {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -14,10 +7,21 @@ body {
   align-items: center;
 }
 
+#sketch-container {
+  min-height: 500px;
+  max-height: 500px;
+  min-width: 500px;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+
 .row {
   display: flex;
+  flex: auto;
 }
 
 .square {
   border: 1px solid black;
+  flex: auto;
 }
