Add bg-colors to sketch-container and square div

--- a/style.css
+++ b/style.css
@@ -12,14 +12,16 @@ body {
   width: 500px;
   display: flex;
   flex-direction: column;
+  background-color: black;
 }
 
 .row {
-  display: flex;
   flex: auto;
+  display: flex;
 }
 
 .square {
-  border: 1px solid black;
   flex: auto;
+  border: 1px solid black;
+  background-color: white;
 }
