--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body {
   align-items: center;
 }
 
+#case {
+  height: 700px;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ad0f1b;
+  border-radius: 10%;
+}
+
 #sketch-container {
   height: 500px;
   width: 500px;
