--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap");
+
 body {
   margin: 0;
   height: 100vh;
@@ -5,6 +7,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: gold;
 }
 
 #case {
@@ -15,7 +18,14 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #ad0f1b;
-  border-radius: 10%;
+  border-radius: 3%;
+}
+
+#case-text {
+  font-family: "Londrina Sketch", sans-serif;
+  font-size: 72px;
+  color: gold;
+  margin-top: -80px;
 }
 
 #sketch-container {
@@ -33,8 +43,7 @@ body {
 
 .square {
   flex: auto;
-  border: 1px solid black;
-  background-color: white;
+  background-color: #c3c5c4;
 }
 
 button {
