Add crumpled paper background image to body

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: gold;
+  background-image: url("./images/crumpled.jpg");
 }
 
 #case {
