--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   font-family: "Londrina Sketch", sans-serif;
   font-size: 72px;
   color: gold;
-  margin-top: -50px;
+  margin-top: -10px;
 }
 
 #sketch-container {
@@ -41,8 +41,34 @@ body {
   background-color: black;
 }
 
+#case-bottom {
+  display: flex;
+}
+
 #case-buttons {
   padding: 20px;
+}
+
+#left-knob {
+  height: 100px;
+  width: 100px;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+  box-shadow:
+    2px 2px 2px #690910,
+    inset 3px 4px 5px rgb(0 0 0 / 50%),
+    inset -4px -5px 7px rgb(0 0 0 / 50%);
+}
+
+#right-knob {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: #e7e7e7;
+  box-shadow:
+    2px 2px 2px #690910,
+    inset 3px 4px 5px rgb(0 0 0 / 50%),
+    inset -4px -5px 7px rgb(0 0 0 / 50%);
 }
 
 .row {
