--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: url("./images/crumpled.jpg");
+}
+
+#container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: gold;
-  background-image: url("./images/crumpled.jpg");
 }
 
 #case {
@@ -74,10 +79,18 @@ body {
 #footer {
   font-family: "Londrina Sketch", sans-serif;
   font-size: 32px;
+  text-align: end;
+  padding-right: 10px;
 }
 
 #footer img {
   height: 30px;
+}
+
+#github-link,
+#github-link:visited {
+  color: black;
+  text-decoration: none;
 }
 
 .row {
